--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
