add config sequelize

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 PORT=
 SECRET_KEY=
 
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+
+NODE_ENV=development
+
 EMAIL_SERVICE=gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
