--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
